fixed spacing

--- a/src/pages/Home/home.scss
+++ b/src/pages/Home/home.scss
@@ -184,7 +184,7 @@
   }
 
   .rmt {
-    margin-top: 3.5rem;
+    margin-top: 3rem;
   }
 
   .showcase {
